# mle_datathon_decision

./: .gitignore  Dockerfile  README.md  main.py  post_example.sh  pyproject.toml  run_docker.sh  train_model.py
app/model/: decision_model.py
app/model/output/: features.pkl  modelo_final.h5  scaler.pkl
app/utils/: features.py  preparator.py
