[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "iamthehype",email = "lucasec911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars (>=1.31.0,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "scikit-learn (>=1.6,<2.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
